k8s/services/api-gateway/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
