k8s/services/api-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
