k8s/services/api-gateway/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: gateway
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: gateway
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 3000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: catalog
      ports:
        - port: 80
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: user
      ports:
        - port: 80
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: order
      ports:
        - port: 80
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
